--- a/about.html
+++ b/about.html
@@ -7,6 +7,12 @@
     <meta name="description" content="De 7 waarden van Dispuut Diogenes">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="img/fav/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="img/fav/favicon.svg" />
+    <link rel="shortcut icon" href="img/fav/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Dispuut Diogenes" />
+    <link rel="manifest" href="img/fav/site.webmanifest" />
 </head>
 <body>
     <!-- Navigation -->
@@ -48,19 +54,21 @@
     <!-- Main Section -->
      <section class="section">
         <div class="container main-container">
-            <div class="main-text">
-                <p>Bij Dispuut Diogenes omarmen we een levendige en onbevangen benadering van het leven, geïnspireerd door de filosoof Diogenes van Sinope. Dit heeft geleid tot zeven kernwaarden die Diogenes typeren:</p><br>
-                <p><span class="highlighted">Open</span> - We houden van een open sfeer en houding. Onze gesprekken zijn vrij van taboes en we moedigen het delen van gedachten en gevoelens aan, zonder angst voor veroordeling.</p><br>
-                <p><span class="highlighted">Eerlijk</span> - We zijn recht door zee en zeggen waar het op staat, daardoor weet je altijd waar je aan toe bent. Ook nodigen we elkaar uit om kwetsbaar te zijn.</p><br>
-                <p><span class="highlighted">Persoonlijk</span> - We willen dat Diogenes een plek is waar iedereen zichzelf kan zijn en er daardoor diepe persoonlijke vriendschappen ontstaan.</p><br>
-                <p><span class="highlighted">Direct</span> - We houden er niet van om lang om dingen heen te draaien. Als er iets is, zeggen we het gewoon.</p><br>
-                <p><span class="highlighted">Gewaardeerd</span> - We laten elkaar zien dat we elkaar waarderen, of het nou om grote dingen gaat of kleine gebaren.</p><br>
-                <p><span class="highlighted">Betrokken</span> - We zijn betrokken bij elkaar en staan voor elkaar klaar, in goede én in slechte tijden.</p><br>
-                <p><span class="highlighted">Confronterend</span> - We dagen elkaar uit om te groeien, zowel persoonlijk als collectief en dat gaat soms met de nodige confrontaties. Dat is soms lastig, maar het helpt ons uiteindelijk allemaal om beter te worden.</p><br>
-            </div>
-            <div class="main-images">
-                <img src="./img/gala-vrouwen.jpg" alt="Groepsfoto gala vrouwen" width="1280" height="952">
-                <img src="./img/gala-mannen.jpg" alt="Groepsfoto gala mannen" width="1280" height="852">
+            <div class="about-grid">
+                <div class="main-text">
+                    <p>Bij Dispuut Diogenes omarmen we een levendige en onbevangen benadering van het leven, geïnspireerd door de filosoof Diogenes van Sinope. Dit heeft geleid tot zeven kernwaarden die Diogenes typeren:</p><br>
+                    <p><span class="highlighted">Open</span> - We houden van een open sfeer en houding. Onze gesprekken zijn vrij van taboes en we moedigen het delen van gedachten en gevoelens aan, zonder angst voor veroordeling.</p><br>
+                    <p><span class="highlighted">Eerlijk</span> - We zijn recht door zee en zeggen waar het op staat, daardoor weet je altijd waar je aan toe bent. Ook nodigen we elkaar uit om kwetsbaar te zijn.</p><br>
+                    <p><span class="highlighted">Persoonlijk</span> - We willen dat Diogenes een plek is waar iedereen zichzelf kan zijn en er daardoor diepe persoonlijke vriendschappen ontstaan.</p><br>
+                    <p><span class="highlighted">Direct</span> - We houden er niet van om lang om dingen heen te draaien. Als er iets is, zeggen we het gewoon.</p><br>
+                    <p><span class="highlighted">Gewaardeerd</span> - We laten elkaar zien dat we elkaar waarderen, of het nou om grote dingen gaat of kleine gebaren.</p><br>
+                    <p><span class="highlighted">Betrokken</span> - We zijn betrokken bij elkaar en staan voor elkaar klaar, in goede én in slechte tijden.</p><br>
+                    <p><span class="highlighted">Confronterend</span> - We dagen elkaar uit om te groeien, zowel persoonlijk als collectief en dat gaat soms met de nodige confrontaties. Dat is soms lastig, maar het helpt ons uiteindelijk allemaal om beter te worden.</p><br>
+                </div>
+                <div class="main-images">
+                    <img src="./img/gala-vrouwen.jpg" alt="Groepsfoto gala vrouwen" width="1280" height="952">
+                    <img src="./img/gala-mannen.jpg" alt="Groepsfoto gala mannen" width="1280" height="852">
+                </div>
             </div>
         </div>
      </section>
