--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="description" content="Welkom bij Dispuut Diogenes. Een dispuut van Navigators Studentenvereniging Amsterdam">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="img/fav/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="img/fav/favicon.svg" />
+    <link rel="shortcut icon" href="img/fav/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Dispuut Diogenes" />
+    <link rel="manifest" href="img/fav/site.webmanifest" />
 </head>
 <body>
     <!-- Navigation -->
@@ -53,20 +59,22 @@
 
     <!-- Main Section -->
     <section class="section">
-        <div class="container">
+        <div class="container main-container">
             <div class="section-header">
                 <h2>Ons Dispuut</h2>
             </div>
-            <p>Welkom bij Diogenes, het dispuut waar eerlijkheid, en gekte samenkomen met diepgang en vriendschap. Bij Diogenes staan onze 7 kernwaarden centraal: open, eerlijk, persoonlijk, direct, gewaardeerd, betrokken en confronterend.  Waarden die passen bij het karakter van de filosoof Diogenes zelf, de man die liever in een ton leefde dan zich aan te passen aan de massa. Dat zie je ook bij ons terug: we houden dingen niet voor onszelf, geen vraag is te gek en alles kan besproken worden. Daardoor groeien we dichter naar elkaar toe maar helpen we ook elkaar groeien in onze relatie met God. </p>
-            <br>
-            <p>Maarrr naast dat, is Diogenes vooral heel veel humor, chaos en enthousiasme. We zijn een plek waar je jezelf kan zijn, en ook alle domme dingen uitgebreid besproken mogen worden. We celebreren de gekte, Op feestjes zijn we altijd te vinden, en schaamte staat niet in ons woordenboek.  Of het nou een themafeest is (met outfits die serieus aangepakt worden), een borrel waar we de dansvloer claimen tot sluit en erna, of natuurlijk onze eigen legendarische <span class="highlighted">CANTUS</span> we zijn altijd aanwezig!! Ook buiten de vaste activiteiten trekken we veel met elkaar op: we gaan graag naar  festivals, borrelen, sporten, chillen, samen eten, wandelen, shoppen, koffietje doen etc etc etc. en, zelfs “studeren”. </p>
-            <br>
-            <p>Kortom: bij Diogenes vind je een plek waar je alle momenten met elkaar kan delen. Een groep waar je groeit, lacht, feest, geniet, danst, en de moeilijke maar bovenal de onvergetelijke herinneringen met elkaar mag delen. </p>
-            <br>
-            <p>ESTE HILARITAS!!!!</p>
-            <br>
-            <p>Xx h.t. TON der dispuut Diogenes - Eva Schuddebeurs <br>Namens bestuur G3.XX</p>
-            <br>
+            <div class="main-text">
+                <p>Welkom bij Diogenes, het dispuut waar eerlijkheid, en gekte samenkomen met diepgang en vriendschap. Bij Diogenes staan onze 7 kernwaarden centraal: open, eerlijk, persoonlijk, direct, gewaardeerd, betrokken en confronterend.  Waarden die passen bij het karakter van de filosoof Diogenes zelf, de man die liever in een ton leefde dan zich aan te passen aan de massa. Dat zie je ook bij ons terug: we houden dingen niet voor onszelf, geen vraag is te gek en alles kan besproken worden. Daardoor groeien we dichter naar elkaar toe maar helpen we ook elkaar groeien in onze relatie met God. </p>
+                <br>
+                <p>Maarrr naast dat, is Diogenes vooral heel veel humor, chaos en enthousiasme. We zijn een plek waar je jezelf kan zijn, en ook alle domme dingen uitgebreid besproken mogen worden. We celebreren de gekte, Op feestjes zijn we altijd te vinden, en schaamte staat niet in ons woordenboek.  Of het nou een themafeest is (met outfits die serieus aangepakt worden), een borrel waar we de dansvloer claimen tot sluit en erna, of natuurlijk onze eigen legendarische <span class="highlighted">CANTUS</span> we zijn altijd aanwezig!! Ook buiten de vaste activiteiten trekken we veel met elkaar op: we gaan graag naar  festivals, borrelen, sporten, chillen, samen eten, wandelen, shoppen, koffietje doen etc etc etc. en, zelfs “studeren”. </p>
+                <br>
+                <p>Kortom: bij Diogenes vind je een plek waar je alle momenten met elkaar kan delen. Een groep waar je groeit, lacht, feest, geniet, danst, en de moeilijke maar bovenal de onvergetelijke herinneringen met elkaar mag delen. </p>
+                <br>
+                <p>ESTE HILARITAS!!!!</p>
+                <br>
+                <p>Xx h.t. TON der dispuut Diogenes - Eva Schuddebeurs <br>Namens bestuur G3.XX</p>
+                <br>
+            </div>
             <div class="button-container">
                 <a href="about.html" class="button">Lees meer over onze 7 waarden</a>
             </div>
