--- a/members.html
+++ b/members.html
@@ -7,6 +7,12 @@
     <meta name="description" content="De huidige leden van Dispuut Diogenes">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="img/fav/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="img/fav/favicon.svg" />
+    <link rel="shortcut icon" href="img/fav/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Dispuut Diogenes" />
+    <link rel="manifest" href="img/fav/site.webmanifest" />
 </head>
 <body>
     <!-- Navigation -->
@@ -47,7 +53,7 @@
 
     <!-- Main Section -->
      <section class="section">
-        <div class="container">
+        <div class="container main-container">
             <div class="member-cards-grid">
                 <div class="member-card">
                     <img class="member-card-img" src="./img/leden/saf.jpg" width="1280" height="1685">
