--- a/photos.html
+++ b/photos.html
@@ -7,7 +7,12 @@
     <meta name="description" content="Een sfeerimpressie van Dispuut Diogenes">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="./img/Diogenes Logo Poppetje Transparant.png">
+    <link rel="icon" type="image/png" href="img/fav/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="img/fav/favicon.svg" />
+    <link rel="shortcut icon" href="img/fav/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Dispuut Diogenes" />
+    <link rel="manifest" href="img/fav/site.webmanifest" />
 </head>
 <body>
     <!-- Navigation -->
