--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <img src="./img/front-page-2.JPG" alt="Groepsfoto" width="1564" height="1043">
                 </div>
                 <div class="photo-card">
-                    <img src="./img/front-page-3.JPG" alt="Groepsfoto" width="2048" height="1536">
+                    <img src="./img/front-page-3.jpg" alt="Groepsfoto" width="2048" height="1536">
                 </div>
             </div>
             <div class="button-container">
@@ -103,4 +103,5 @@
     </section>
     
 </body>
+
 </html>
